# Rust_Noobs_Render

./: README  README.md
rust_render/: Cargo.toml
rust_render/shader/: basicshapef.glsl  basicshapev.glsl
rust_render/src/: camera.rs  input.rs  main.rs  mesh.rs  object.rs  renderer.rs  window.rs
