[package]
name = "rust_render"
version = "0.1.0"
authors = ["ashley"]

[features]
default = ["opengl"]
"opengl" = ["gfx_device_gl", "gfx_window_glutin", "glutin"]

[dependencies]
cgmath = "0.15.0"
image = "0.13"
gfx = "0.16"
# OpenGL
gfx_device_gl = { version = "0.14", optional = true }
gfx_window_glutin = { version = "0.17", optional = true }
glutin = { version = "0.9", optional = true }